tests/invalidTest/other/global_name_twice.q
# EXPECT the gloabal variable has been declared
sint64 a = 3
sint64 a = 9
